--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Runique</string>
     <string name="title_analytics_feature">Analytics</string>
+    <string name="installing_module">Installing module</string>
+    <string name="error_installation_failed">Unfortunately, the installation failed. Please try again later.</string>
+    <string name="analytics_installed">Analytics installed!</string>
+    <string name="error_couldnt_load_module">Error couldn\'t load the module</string>
 </resources>
